# rsatoolbox

./: .bandit  .codeclimate.yml  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SoftwareFlowChart.eps  analyse_colormap_poll.py  codecov.yml  consistencytests.py  demo_fmri_glms.py  demo_fmri_rois.py  demo_fmri_statmaps.py  explore_colormaps.py  fig1.py  model_family.py  plot_fig1.py  pr_notes.md  prep_fig1.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  test_jones.py  test_sitek.py
.conda/: README.md  meta.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-request.md
.github/workflows/: ci_assistant.py  create_artifacts.yml  publish.yml  pull_request.yml  python-publish.yml  style.yml  testbuild.yml
demos/: Riemannian.ipynb  Temporal RSA.ipynb  Untitled.ipynb  allen_extraction.ipynb  allen_preprocess.py  allen_rdm.ipynb  demo_001.py  demo_annotated_rdm_plot.ipynb  demo_bootstrap.ipynb  demo_component_projection.ipynb  demo_dataset.ipynb  demo_dissimilarities.ipynb  demo_eeg.ipynb  demo_eeg.py  demo_flexible_models.ipynb  demo_fmri.ipynb  demo_fmri_custom.ipynb  demo_fmri_fsl.ipynb  demo_fmri_nilearn.ipynb  demo_fmri_patterns.ipynb  demo_fmri_spm.ipynb  demo_fmri_statmaps.ipynb  demo_inferring_brain_2016.ipynb  demo_meg_mne.ipynb  demo_model_family.ipynb  demo_model_map.ipynb  demo_rdm_comparison_scatterplot.ipynb  demo_rdm_visualisation_92images.ipynb  demo_riemannian.ipynb  demo_searchlight_surface.py  demo_searchlight_surface_bold5k.py  demo_searchlight_volume.ipynb  demo_spikes.ipynb  demo_spikes_alexnet.ipynb  demo_temporal.ipynb  demo_temporal_mne-python_MEG-92-images.ipynb  demo_unbalanced.ipynb  example_dataset.ipynb  example_dissimilarities.ipynb  exercise_RSA1_solution.ipynb  (+16 more)
demos/118_images_files/: 118_animate_RDM.npy  118_animate_labels.npy
demos/92imageData/: 92_behavRDMs.mat  92_brainRDMs.mat  92_modelRDMs.mat  Kriegeskorte_Neuron2008_supplementalData.mat  faceAnimateInaniClustersRDM.mat  rdm92_HMAXnatImPatch.mat  simTruePatterns.mat
demos/TemporalSampleData/: preproc_mn_sample_data.py  preproc_mne_sample_data.py
demos/brain_observatory/: .gitattributes  experiment_containers.json  manifest.json
demos/demo_eeg_data/: Meadows_nsd100annotations_v_v1_devoted-caiman_2_annotations.csv
demos/paper_examples/: sim_crossval.ipynb  sim_crossval.py  sim_mahalanobis.ipynb
demos/rdms_inferring/: modelRDMs.mat  modelRDMs_A2020.mat
devops/: assistant.py  gha.py  style_assistant.py  typing_assistant.py
docs/: README.md  requirements.txt
docs/source/: Temporal RSA.nblink  api.rst  comparing.rst  conf.py  datasets.rst  demo_annotated_rdm_plot.nblink  demo_bootstrap.nblink  demo_dataset.nblink  demo_dissimilarities.nblink  demo_eeg.nblink  demo_flexible_models.nblink  demo_fmri.nblink  demo_fmri_nilearn.nblink  demo_fmri_patterns.nblink  demo_fmri_spm.nblink  demo_meg_mne.nblink  demo_rdm_vis.nblink  demo_riemannian.nblink  demo_searchlight.nblink  demo_spikes.nblink  demo_spikes_alexnet.nblink  demo_temporal.nblink  demo_unbalanced.nblink  demos.rst  distances.rst  example_dataset.nblink  example_dissimilarities.nblink  exercise_all.nblink  fitting.rst  getting_started.rst  index.rst  inference.rst  literature_cited.rst  model.rst  model_fitting.rst  model_specification.rst  operations.rst  overview.rst  pyrsa.data.computations.rst  pyrsa.data.dataset.rst  (+93 more)
pyrsa/: __init__.py  console.py
pyrsa/data/: __init__.py  components.py  computations.py  dataset.py  (+5 more)
rsatoolbox/: __init__.py
stats/: allen_models.py  allen_stats.py  allen_tasks.csv  allen_tasks_all.csv  allen_tasks_old.csv  allen_tasks_one.csv  allen_tasks_three.csv  allen_tasks_two.csv  cluster.sh  cluster_allen.sh  cluster_allen_download.sh  cluster_allen_nyu.sh  cluster_allen_nyu_2.sh  cluster_allen_summary.sh  cluster_boot_cv.sh  cluster_cells.sh  cluster_comp_fix.sh  cluster_eco.sh  cluster_eco_ana.sh  cluster_eco_fix.sh  cluster_eco_sim.sh  cluster_eco_summarise.sh  cluster_flex_fix.sh  comp_script.py  helpers.py  hrf.py  models.py  nn_simulations.py  plot_stats.py  profiling.py  rename_old_comp.py  script_run_pooling_dnn.py  script_save_dnn_data.py  stats.py  zip.sh
tests/: data_ops_merge.py  requirements.txt  test_c.py  test_calc.py  test_calc_rdm.py  test_calc_unbalanced.py  test_colors.py  test_compare.py  test_compare_rdm.py  test_components.py  test_contrast_matrix.py  test_crossval.py  test_data.py  test_data_ops_merge.py  test_data_utils.py  test_dataset_dataframe.py  test_demo.py  test_descriptor_utils.py  test_fmri.py  test_indicator.py  test_inference.py  test_io_bids.py  test_io_fmriprep.py  test_io_hdf5.py  test_io_meadows.py  test_io_mne.py  test_io_pkl.py  test_io_spm.py  test_model.py  test_model_family.py  test_modelfamily.py  test_nn_ls.py  test_noise.py  test_noise_ceiling.py  test_pair_selection.py  test_rdm.py  test_rdms_align.py  test_rdms_combine.py  test_rdms_expand.py  test_rdms_pandas.py  (+9 more)
wiki/: README.md
(+447 files in other folders)
