[build-system]
requires = [
    "setuptools~=65.3",
    "setuptools-scm",
    "wheel",
    "numpy>=1.21.2",
    "scipy",
    "cython~=3.0.0a11"
]
build-backend = "setuptools.build_meta"

[project]
name = "rsatoolbox"
description = "Representational Similarity Analysis (RSA) in Python"
requires-python = ">=3.7"
version = "0.0.5"
authors = [
    {name="rsatoolbox authors"},
]
keywords = ["neuroscience "]
license = {file = "LICENSE"}
classifiers = [
      'Programming Language :: Python',
      'License :: OSI Approved :: MIT License',
      'Operating System :: OS Independent',
      'Development Status :: 4 - Beta',
      'Topic :: Scientific/Engineering',
      'Intended Audience :: Science/Research',
      'Programming Language :: Python :: 3.7',
      'Programming Language :: Python :: 3.8',
      'Programming Language :: Python :: 3.9'
]
dynamic = ["readme", "dependencies"]

[tool.setuptools]
packages = ["rsatoolbox"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
readme = {file = "README.md"}
dependencies = {file = "requirements.txt"}

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = "*.py"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
before-test = "pip install -r tests/requirements.txt"

