[build-system]
requires = [
    "setuptools~=65.3",
    "setuptools-scm[toml]~=7.0.0",
    "wheel",
    "numpy>=1.21.2",
    "scipy",
    "cython~=3.0.0a11",
    "twine~=4.0.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "rsatoolbox"
description = "Representational Similarity Analysis (RSA) in Python"
requires-python = ">=3.7,<3.12"
authors = [
    {name="rsatoolbox authors"},
]
keywords = ["neuroscience"]
license = {file = "LICENSE"}
classifiers = [
      'Programming Language :: Python',
      'License :: OSI Approved :: MIT License',
      'Operating System :: OS Independent',
      'Development Status :: 4 - Beta',
      'Topic :: Scientific/Engineering',
      'Intended Audience :: Science/Research',
      'Programming Language :: Python :: 3.7',
      'Programming Language :: Python :: 3.8',
      'Programming Language :: Python :: 3.9',
      'Programming Language :: Python :: 3.10',
      'Programming Language :: Python :: 3.11',
]
dynamic = ["readme", "dependencies", "version"]

[project.urls]
homepage = "https://github.com/rsagroup/rsatoolbox"
documentation = "https://rsatoolbox.readthedocs.io/"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}
dependencies = {file = "requirements.txt"}

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = "*.py"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
before-test = "pip install -r tests/requirements.txt"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*", "pp*"]
